--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "q8sh8x1xtm");
-  </script>
+    </script>
+
+    <!-- Brevo Conversations {literal} -->
+    <script>
+      (function(d, w, c) {
+          w.BrevoConversationsID = '67b125072e0177e58404c44c';
+          w[c] = w[c] || function() {
+              (w[c].q = w[c].q || []).push(arguments);
+          };
+          var s = d.createElement('script');
+          s.async = true;
+          s.src = 'https://conversations-widget.brevo.com/brevo-conversations.js';
+          if (d.head) d.head.appendChild(s);
+      })(document, window, 'BrevoConversations');
+    </script>
+    <!-- /Brevo Conversations {/literal} -->
   
   </body>
 </html>
