feat: add schema.org

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
+      <title>CodeLab Tecnologia | Transformando Ideias em Soluções Digitais Únicas</title>
+      <meta
+        name="description"
+        content="Agência especializada em desenvolvimento web e mobile, unindo design criativo, tecnologia de ponta e estratégia para impulsionar marcas e gerar resultados mensuráveis para seu negócio. Solicite um orçamento hoje!"
+      />
+      <meta name="keywords" content="desenvolvimento web, aplicativos mobile, design de interface, UI/UX design, desenvolvimento fullstack, criação de sites, sistemas web, aplicativos personalizados, programação react, empresa tecnologia" />
+      <meta property="og:title" content="CodeLab Tecnologia - Soluções Digitais que Transformam Negócios" />
+      <meta property="og:description" content="Transformamos ideias em soluções digitais únicas com design criativo e tecnologia de ponta para impulsionar sua marca no mercado digital." />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://www.codelabtec.com/" />
+      <meta property="og:image" content="https://www.codelabtec.com/public/thumb.png" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <link rel="canonical" href="https://www.codelabtec.com/" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBKJRYFJ5R"></script>
     <script>
@@ -27,7 +41,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=switzer@100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>CodeLab Tecnologia</title>
+    <title>CodeLab Tecnologia | Desenvolvimento Web, Mobile e UI/UX Design Profissional</title>
   </head>
   <body>
 
