fex: meta description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       })(window,document,'script','dataLayer','GTM-5BTJN58T');</script>
       <!-- End Google Tag Manager -->
     
-      <title>CodeLab Tecnologia | Transformando Ideias em Soluções Digitais Únicas</title>
+      <title>
+        Bem-vindo(a) à CodeLab Tecnologia — Soluções Criativas para Você
+      </title>
 
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/assets/favicon.svg" type="image/svg+xml">
@@ -32,9 +34,14 @@
 
     <meta
       name="description"
-      content="Agência especializada em desenvolvimento web e mobile, unindo design criativo, tecnologia de ponta e estratégia para impulsionar marcas e gerar resultados mensuráveis para seu negócio. Solicite um orçamento hoje!"
+      content="Encontre soluções personalizadas e criativas na CodeLab Tecnologia. 
+                Oferecemos serviços completos para impulsionar seu negócio, do design ao suporte contínuo."
     />
-    <meta name="keywords" content="desenvolvimento web, aplicativos mobile, design de interface, UI/UX design, desenvolvimento fullstack, criação de sites, sistemas web, aplicativos personalizados, programação react, empresa tecnologia" />
+    <meta
+      name="keywords"
+      content="CodeLab Tecnologia, codelabtec, saas, software, desenvolvimento full-stack, aplicativos, react native, criação de sites, rio de janeiro, apps, app, criar site gratis"
+    />
+
     <meta property="og:title" content="CodeLab Tecnologia - Soluções Digitais que Transformam Negócios" />
     <meta property="og:description" content="Transformamos ideias em soluções digitais únicas com design criativo e tecnologia de ponta para impulsionar sua marca no mercado digital." />
     <meta property="og:type" content="website" />
@@ -54,8 +61,6 @@
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
-  
 
     <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
